PoC: made some progress on implementing an array based version of ketchup's PoC

--- a/ketchup/Cargo.toml
+++ b/ketchup/Cargo.toml
@@ -11,4 +11,5 @@ name = "ketchup"
 path = "src/lib.rs"
 
 [dependencies]
-ketchup-derive = { path = "../ketchup-derive" }
+logos = "0.14.0"
+# ketchup-derive = { path = "../ketchup-derive" }
