example maths interpreter: added an example maths interpreter using ketchup

--- a/ketchup/Cargo.toml
+++ b/ketchup/Cargo.toml
@@ -13,3 +13,8 @@ path = "src/lib.rs"
 
 [dependencies]
 # ketchup-derive = { path = "../ketchup-derive" }
+
+[workspace]
+members = [
+  "examples/*"
+]
