v2: initialised v2 of ketchup with todo-list and nix flakes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ketchup"
-version = "1.1.1"
+version = "2.0.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "A parser that can *ketch-up* with your programming language."
@@ -19,5 +19,5 @@ path = "src/lib.rs"
 
 [workspace]
 members = [
-  "examples/*"
+  # "examples/*"
 ]
