benchmarking code: added benchmarking code
I've added a simple example to benchmark ketchup against other parsing
libraries like nom.

Currently ketchup *is* slower than nom though that is mainly due to the
insertion cost of the vector when inserting into the start (which would
be solved by a double-padded vector).

Signed-off-by: Ethan Ma <kalscium@protonmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ path = "src/lib.rs"
 # ketchup-derive = { path = "../ketchup-derive" }
 
 [workspace]
-members = ["examples/maths-interpreter"
+members = [ "examples/benchmark","examples/maths-interpreter"
   # "examples/*"
 ]
